--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<div class="col slider_content_col">
 								<div class="main_slider_content">
 									<h1>Do you need</h1>
-									<h1>a <span>modern</span> website?</h1>
+									<h1>a <span>conference</span> website?</h1>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla. </p>
 									<div class="button discover_button">
 										<a href="#" class="d-flex flex-row align-items-center justify-content-center">discover<img src="images/arrow_right.svg" alt=""></a>
