--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Logo -->
 		<div class="logo_container mr-auto">
 			<div class="logo">
-				<a href="#"><span>z</span>zeta<span>.</span></a>
+				<a href="#">&nbsp;</a>
 			</div>
 		</div>
 
